--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "lodash": "^4.17.11",
+    "moment": "^2.22.2",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-vue": "^0.7.0",
+    "vee-validate": "^2.1.4",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
@@ -21,6 +27,7 @@
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
     "node-sass": "^4.9.0",
+    "prettier-eslint": "^8.8.2",
     "sass-loader": "^7.0.1",
     "vue-template-compiler": "^2.5.17"
   }
