--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "chart.js": "^2.7.3",
     "lodash": "^4.17.11",
+    "mobile-device-detect": "^0.2.3",
     "moment": "^2.22.2",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-vue": "^0.7.0",
     "vee-validate": "^2.1.4",
     "vue": "^2.5.17",
+    "vue-chartjs": "^3.4.0",
+    "vue-google-charts": "^0.3.2",
+    "vue-lodash": "^2.0.0",
+    "vue-moment": "^4.0.0",
     "vue-router": "^3.0.1",
+    "vuejs-datepicker": "^1.5.4",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
